# Operating-System

./: README.md
OS_Codes/: CMakeLists.txt
OS_Codes/chap3/: banker_algorithm.c
OS_Codes/chap5/: 先进先出置换算法 仿真.c  最佳置换算法 仿真.c  最近最少使用置换算法 仿真.c  简单型Clock置换算法 仿真.c
书后习题/chap2.进程的描述和控制/: chap2.进程的描述和控制.md
书后习题/chap3.处理机调度与死锁/: chap3.处理机调度和死锁.md
书后习题/chap4.存储器管理/: chap4.存储器管理.md
